# high-performance-compute-lib

./: CMakeLists.txt  README.md  format.sh  run.sh
include/: matmul.h  print.h  simple_matmul.h  transpose.h
src/: CMakeLists.txt
src/kernels/: fff.cu  matmul.cu  print.cu  simple_matmul.cu  transpose.cu
src/utils/: cuda_utils.h
tests/: CMakeLists.txt
tests/kernels/: test.cc
